<resources>
    <string name="app_name">Csr</string>
    <string name="ss_heading">#supportCSR</string>
    <string name="ss_heading_tag">Join with us.</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="action_categories">Categories</string>
    <string name="action_items">Items</string>
    <string name="action_expired_items">Expired Items</string>
    <string name="action_alert">Alert</string>
    <string name="hello_world_txt">Hello World</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- Items label -->
    <string name="lbl_item_name">Item Name:</string>
    <string name="lbl_barcode">Bar Code:</string>
    <string name="lbl_purchase_price">Purchase Price:</string>
    <string name="lbl_expired_date">Expired Date:</string>
    <string name="lbl_category">Category:</string>
    <string name="lbl_stock">Stocks</string>
    <string name="lbl_expired">Expired</string>
    <string name="lbl_sold">Sold</string>
    <string name="lbl_profit">Profit</string>
    <string name="lbl_dashboard">This Year 2018 Overview</string>
    <string name="lbl_stock_nu">250</string>
    <string name="Rs">\u20B9</string>
    <string name="btn_save">Save</string>

    <string name="hint_item_name">Item Name</string>
    <string name="hint_cookie_name">Cookie Name</string>
    <string name="hint_barcode">Barcode</string>
    <string name="hint_expiry_date">Expiry Date</string>
    <string name="hint_purchase_price">Purchase Price</string>
    <string name="hint_selling_price">Selling Price</string>
    <string name="lbl_cookie">Cookie</string>
    <string name="lbl_select_category">Select a Category</string>
    <string name="hint_category_name">Category Name</string>
    <string name="hint_csr_abb">CSR</string>
    <string name="hint_csr_full_form">(Corporate Social Responsibility)</string>
    <string name="hint_inspired_by">Inspired by CapeStart</string>
</resources>
