<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_categories"
        android:title="@string/action_categories"
        app:showAsAction="ifRoom"
        android:enabled="true">
    </item>

    <item
        android:id="@+id/action_items"
        android:title="@string/action_items"
        app:showAsAction="ifRoom"
        android:enabled="true">
    </item>

    <item
        android:id="@+id/action_expired_items"
        android:title="@string/action_expired_items"
        app:showAsAction="ifRoom"
        android:enabled="true">
    </item>

    <item
        android:id="@+id/action_alert"
        android:title="@string/action_alert"
        app:showAsAction="ifRoom"
        android:enabled="true">
    </item>
</menu>