<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/border"
        android:layout_height="wrap_content">

        <!-- Item name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_cookie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_cookie_name" />

        </android.support.design.widget.TextInputLayout>

        <!-- Barcode -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_barcode" />

        </android.support.design.widget.TextInputLayout>

        <!-- expiry date -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_expiry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_expiry_date" />

        </android.support.design.widget.TextInputLayout>

        <!--Purchase Price Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_purchase_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_purchase_price" />

        </android.support.design.widget.TextInputLayout>

        <!-- Original Price Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_selling_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_selling_price" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/lbl_select_category"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_category"
                android:prompt="@string/hint_expiry_date"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/btn_save" />

    </LinearLayout>

</ScrollView>
