<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            cardview:cardCornerRadius="10dp"
            cardview:cardElevation="10dp"
            cardview:cardUseCompatPadding="true"
            android:layout_height="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/lbl_dashboard" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/lbl_stock"/>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/circular_shape"
                    android:elevation="10dp"
                    android:layout_height="150dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/lbl_stock_nu"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/lbl_expired"/>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:elevation="10dp"
                    android:background="@drawable/circular_shape"
                    android:layout_height="150dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/lbl_stock_nu"/>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:text="@string/lbl_sold"/>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:elevation="10dp"
                    android:background="@drawable/circular_shape"
                    android:layout_height="150dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/lbl_stock_nu"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/lbl_profit" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:elevation="10dp"
                    android:background="@drawable/circular_shape"
                    android:layout_height="150dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/lbl_stock_nu"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>